--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  alert_dialogs:
+    git:
+      url: https://github.com/bizz84/codewithandrea_flutter_packages
+      path: packages/alert_dialogs
+  email_password_sign_in_ui:
+    git:
+      url: https://github.com/bizz84/codewithandrea_flutter_packages
+      path: packages/email_password_sign_in_ui
+  firestore_service:
+    git:
+      url: https://github.com/bizz84/codewithandrea_flutter_packages
+      path: packages/firestore_service
+  logger: ^1.0.0
   provider: ^6.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  english_words: ^4.0.0
+  equatable: ^2.0.3
+  cloud_firestore: ^2.2.2
+  firebase_auth: ^1.4.1
+  firebase_core: ^1.3.0
+  shared_preferences: ^2.0.6
+  flutter_riverpod: ^1.0.0
+  flutter_svg: ^0.23.0+1
+  state_notifier: ^0.7.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
