addition of firebase base code

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "hybrid_gift",
-    "short_name": "hybrid_gift",
+    "name": "gtk_flutter",
+    "short_name": "gtk_flutter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
