--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gtk_flutter">
+    package="com.project.hybrid_gifts">
    <application
-        android:label="gtk_flutter"
+        android:label="Hybrid Gifts"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
