--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: gtk_flutter
-description: Get to know Firebase with Flutter
+name: hybrid_gift
+description: Application for hybrid gifting
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
