--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.0.0
   provider: ^6.0.1
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
