--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper: ^0.3.1
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
@@ -25,3 +27,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/
