--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
   tflite_flutter: ^0.9.0
+  textfield_search: ^0.9.2
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
