--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^1.10.0
   tflite_flutter: ^0.9.0
   textfield_search: ^0.9.2
+  csv: ^5.0.1
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
