--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   tflite_flutter: ^0.9.0
   textfield_search: ^0.9.2
   csv: ^5.0.1
+  random_color: ^1.0.6-nullsafety
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
