--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   textfield_search: ^0.9.2
   csv: ^5.0.1
   random_color: ^1.0.6-nullsafety
+  auto_size_text: ^3.0.0
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
