--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   google_fonts: ^2.0.0
   provider: ^6.0.1
   cupertino_icons: ^1.0.4
+  camera:
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
