--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
+  firebase_storage: ^10.2.11
+  image_picker: ^0.8.5
+  permission_handler: ^9.2.0
   tflite_flutter: ^0.9.0
   textfield_search: ^0.9.2
   csv: ^5.0.1
@@ -23,6 +26,7 @@ dependencies:
   camera:
   path_provider:
   path:
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
