--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   path_provider:
   path:
   transparent_image: ^2.0.0
+  get_it: ^7.2.0
+  flutter_riverpod: ^1.0.3
 
 dev_dependencies:
   flutter_test:
