--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   get_it: ^7.2.0
   flutter_riverpod: ^1.0.3
   dcdg: ^4.0.1
+  firebase_app_check: ^0.0.6+10
 
 dev_dependencies:
   flutter_test:
